kuber/service-nest.yml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-app
  labels:
    app: nestjs-app
spec:
  type: ClusterIP
  selector:
    app: nestjs-app
  ports:
    - port: 3000
      targetPort: 3000
